--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,4 @@
-1. if request is already pending then check before click on application form
+1. Should we allow student to apply multiple times or not
+2. Do every student have project manager
+    --> if no at start and one request is pending always
+    --> so when he get project manager how to find latest pending request
